metadata/force-app/main/default/objects/CustomName_wbDDY__c/CustomName_wbDDY__c.object-meta.xml
<CustomObject>
    <description>Description_cpaCn</description>
    <label>CustomLabel_aezwn</label>
    <nameField>
        <label>CustomLabel_aezwn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_aezwns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>