metadata/force-app/main/default/objects/CustomName_wbDDY__c/fields/CustomField_cgJFu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cgJFu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielddvtMr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>