metadata/force-app/main/default/objects/CustomName_wbDDY__c/fields/CustomField_QZZMy__c.field-meta.xml
<CustomField>
    <fullName>CustomField_QZZMy__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvrPEc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>